JavaScript/rediscovering_javascript/modules/output/run-collide1.output
import { Thermostat } from './home';
         ^^^^^^^^^^
SyntaxError: Identifier 'Thermostat' has already been declared
